Moved all styles from public/ folder to public/styles/ folder. Changed head address of all /views files to reflect this change

--- a/views/main_page.ejs
+++ b/views/main_page.ejs
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- the forward slash preceding the href for the css page is important. Deeper routed pages need it to locate the page, for some reason -->
-    <link rel="stylesheet" href="/main_page_style.css"/>
+    <link rel="stylesheet" href="/styles/main_page_style.css"/>
     
     <title>My First Webpage That Inserts Dynamic Javascript</title>
 </head>
