--- a/views/friendly.ejs
+++ b/views/friendly.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watch out, friend</title>
-    <link rel="stylesheet" href="/friendly_style.css">
+    <link rel="stylesheet" href="/styles/friendly_style.css">
 </head>
 <body>
 
