--- a/public/styles/static_style.css
+++ b/public/styles/static_style.css
@@ -1,3 +1,21 @@
 body {
-    background-color: blue;
+    background-color: rgb(152, 152, 204);
+}
+
+h1 {
+    font-size: 50px;
+    transition: color 2.5s;
+}
+
+h1.hover {
+    color: white;
+}
+
+.content-div {
+    text-align: center;
+}
+
+.greeting {
+    font-size: 25px;
+    color: rgb(8, 61, 8);
 }
