--- a/public/styles/static_style.css
+++ b/public/styles/static_style.css
@@ -5,9 +5,10 @@ body {
 h1 {
     font-size: 50px;
     transition: color 2.5s;
+    color: rgb(126, 0, 0);
 }
 
-h1.hover {
+h1:hover {
     color: white;
 }
 
@@ -18,4 +19,13 @@ h1.hover {
 .greeting {
     font-size: 25px;
     color: rgb(8, 61, 8);
+    transition: color 3s;
+}
+
+.greeting:hover {
+    color: aquamarine;
+}
+
+.greeting-image {
+    margin-top: 100px;
 }
