--- a/public/styles/static_style.css
+++ b/public/styles/static_style.css
@@ -17,7 +17,8 @@ h1:hover {
 }
 
 .greeting {
-    font-size: 25px;
+    margin-top: 80px;
+    font-size: 30px;
     color: rgb(8, 61, 8);
     transition: color 3s;
 }
@@ -28,4 +29,7 @@ h1:hover {
 
 .greeting-image {
     margin-top: 100px;
+    width: 600px;
+    border-style: solid;
+    border-color: rgb(78, 78, 78);
 }
